--- a/logstash.yml
+++ b/logstash.yml
@@ -1,6 +1,7 @@
 http.host: 0.0.0.0
+node.name: logstash
 path.config: /usr/share/logstash/pipeline/logstash.conf
 pipeline.ecs_compatibility: disabled
 xpack.monitoring.elasticsearch.hosts:
-- http://elk-docker-elasticsearch-1:9200
+- http://elk-docker_elasticsearch_1:9200
 xpack.monitoring.enabled: false
