--- a/logstash.conf
+++ b/logstash.conf
@@ -41,7 +41,7 @@ filter {
 
 output {
   elasticsearch {
-    hosts => "http://elk-docker-elasticsearch-1:9200"
+    hosts => "http://elasticsearch:9200"
     index => "logs-%{+YYYY.MM.dd}"
     # index => "web-logs-%{+YYYY.MM.dd}"
 	
